Fix dark mode border color on search bar

--- a/src/styles/pages/leaderboard.module.scss
+++ b/src/styles/pages/leaderboard.module.scss
@@ -45,7 +45,7 @@
 
     .search {
       background: none;
-      border: 1px solid var(--theme-accent-line-1);
+      border: 1px solid var(--theme-text-on-background-1);
       border-radius: 1rem;
       color: inherit;
       font-size: 14px;
